[package]
name = "gtrans"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/gtrans"
keywords = ["Google", "translation", "cli"]
license-file = "LICENSE"
readme = "README.md"
description = "Google translation CLI tool written in Rust"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "0.3.1"
serde_json = "1.0"